html code fully written

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/CSS/styles.css">
-    <title>Jonathan's Portfolio</title>
+    <title>Jonathan Martinez</title>
 </head>
 <body>
 
@@ -13,6 +13,41 @@
 <header>
     <h1>Jonathan Martinez</h1> 
 </header>
-    
+
+<!--Navigation links starts here-->
+<nav>
+    <ul>
+        <li><a href="#project">Projects</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+<!--Navigation links end here -->
+
+<!--Each section of the page starting with Project Section-->
+    <section class="Content">
+        <article id="Projects" class="Content">
+            <h2>Projects</h2>
+                <p> These are some of the projects I have worked on or currently working on. I intend to update this page as I contintue to complete more projects</p>
+        </article>  
+
+<!-- About section-->
+    <article id="About" class="Content">
+        <h2>About Me</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Faucibus scelerisque eleifend donec pretium vulputate sapien. Sit amet venenatis urna cursus. Nisl vel pretium lectus quam id leo in. 
+        </p>
+    </article>
+
+<!--Contact Section -->
+    <article id="Contact" class="Content">
+        <h2>Contact Me</h2>
+            <ul>
+                <li>469-5555-5555</li>
+                <li>jonathan.martinez@website.com</li>
+                <li>Github</li>
+            </ul>
+    </article>
 </body>
 </html>
