--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--Navigation links starts here-->
 <nav>
     <ul>
-        <li><a href="#project">Projects</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
