nav bar links with hover

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <!-- Header section-->
 <header>
     <h1>Jonathan Martinez</h1> 
+<!--Navigation links starts here-->
+    <nav>
+        <ul class="nav-list">
+            <li class="nav-item"><a href="#projects">Projects</a></li>
+            <li class="nav-item"><a href="#about">About</a></li>
+            <li class="nav-item"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 </header>
 
-<!--Navigation links starts here-->
-<nav>
-    <ul>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
 <!--Navigation links end here -->
 
 <!--Each section of the page starting with Project Section-->
