added png images and nav bar is styled correctly

--- a/index.html
+++ b/index.html
@@ -25,23 +25,34 @@
 <!--Navigation links end here -->
 
 <!--Each section of the page starting with Project Section-->
-    <section class="Content">
-        <article id="Projects" class="Content">
+    <article class="project-section">
+        <article class="box">
             <h2>Projects</h2>
                 <p> These are some of the projects I have worked on or currently working on. I intend to update this page as I contintue to complete more projects</p>
+                <img class="run-buddy" src="/assets/images/runbuddy.png">
+                <img src="/assets/images/coming soon.png"> 
+                <img src="/assets/images/coming soon.png"> 
         </article>  
 
 <!-- About section-->
-    <article id="About" class="Content">
+    <article class="about-section">
+        <article class="box">
         <h2>About Me</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Faucibus scelerisque eleifend donec pretium vulputate sapien. Sit amet venenatis urna cursus. Nisl vel pretium lectus quam id leo in. 
+            Vestibulum eu ipsum sed velit condimentum maximus. 
+            Etiam ultrices porttitor elit, tristique sodales lectus efficitur vel. 
+            Mauris tellus tellus, rutrum at leo quis, ullamcorper scelerisque nulla. 
+            Pellentesque est urna, volutpat quis mollis et, sagittis aliquam urna. 
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus ut efficitur ante. 
+            Sed sollicitudin molestie dolor, vel dignissim leo laoreet et. Fusce sem tortor, laoreet sed consequat et, volutpat non leo. Cras blandit pellentesque diam ac tristique.
+            Pellentesque auctor accumsan mattis. Pellentesque nec augue vitae est sollicitudin porttitor. Ut eget sodales leo. Maecenas a arcu eros. Phasellus pellentesque maximus dictum. 
+            Sed eu erat a dui ornare mattis in sit amet nulla. In pulvinar cursus urna, ac elementum dui egestas in.
         </p>
     </article>
 
 <!--Contact Section -->
-    <article id="Contact" class="Content">
+    <article class="contact-section">
+        <article class="box">
         <h2>Contact Me</h2>
             <ul>
                 <li>469-5555-5555</li>
