website is functional

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <!--Each section of the page starting with Project Section-->
     <article class="project-section">
         <article class="box">
+            <span id="projects"></span>
             <h2>Projects</h2>
                 <p> These are some of the projects I have worked on or currently working on. I intend to update this page as I contintue to complete more projects</p>
                 <img class="run-buddy" src="/assets/images/runbuddy.png">
@@ -37,8 +38,10 @@
 <!-- About section-->
     <article class="about-section">
         <article class="box">
+            <span id="about"></span>
         <h2>About Me</h2>
         <p>
+            <img class="selfie" src="/assets/images/1636069223418.jfif">
             Vestibulum eu ipsum sed velit condimentum maximus. 
             Etiam ultrices porttitor elit, tristique sodales lectus efficitur vel. 
             Mauris tellus tellus, rutrum at leo quis, ullamcorper scelerisque nulla. 
@@ -53,12 +56,14 @@
 <!--Contact Section -->
     <article class="contact-section">
         <article class="box">
+            <span id="contact"></span>
+
         <h2>Contact Me</h2>
-            <ul>
-                <li>469-5555-5555</li>
-                <li>jonathan.martinez@website.com</li>
-                <li>Github</li>
+            <ul class= "contact-links">
+                <li class="nav-item"><a href="https://www.linkedin.com/in/jonathan-martinez-938a11183/">Linkedin</a></li>
+                <li class="nav-item"><a href="mailto:jonnym771@gmail.com">Mail To</a></li>
+                <li class="nav-item"><a href="https://github.com/Jonathan0212">Github</a></li>
             </ul>
-    </article>
+</article>
 </body>
 </html>
