images are not working in published site and readme.md

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <span id="projects"></span>
             <h2>Projects</h2>
                 <p> These are some of the projects I have worked on or currently working on. I intend to update this page as I contintue to complete more projects</p>
-                <img class="run-buddy" src="/assets/images/runbuddy.png">
-                <img src="/assets/images/coming soon.png"> 
-                <img src="/assets/images/coming soon.png"> 
+                <img class="run-buddy" src="assets/images/runbuddy.png">
+                <img src="assets/images/coming soon.png"> 
+                <img src="assets/images/coming soon.png"> 
         </article>  
 
 <!-- About section-->
@@ -42,7 +42,7 @@
             <span id="about"></span>
         <h2>About Me</h2>
         <p>
-            <img class="selfie" src="/assets/images/1636069223418.jfif">
+            <img class="selfie" src="assets/images/1636069223418.jfif">
             Vestibulum eu ipsum sed velit condimentum maximus. 
             Etiam ultrices porttitor elit, tristique sodales lectus efficitur vel. 
             Mauris tellus tellus, rutrum at leo quis, ullamcorper scelerisque nulla. 
