added new project link:

--- a/index.html
+++ b/index.html
@@ -32,8 +32,20 @@
             <h2>Projects</h2>
                 <p> These are some of the projects I have worked on or currently working on. I intend to update this page as I contintue to complete more projects</p>
                 <img class="run-buddy" src="assets/images/runbuddy.png">
-                <img src="assets/images/coming soon.png"> 
-                <img src="assets/images/coming soon.png"> 
+
+
+                <a href="https://auzz24.github.io/CovidTravel/">
+                    <img class="CovidTravel" src="assets/images/Screenshot_1.png" width="1000" height="1000"> 
+                 </a>
+                
+                
+             <img src="assets/images/coming soon.png"> 
+
+
+
+
+
+
         </article>  
 
 <!-- About section-->
