--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
              <img src="assets/images/coming soon.png"> 
 
 
+                <a href="https://canine-lodge.herokuapp.com/">
+                    <img class = "canine" src="assets/images/canine-lodge.png" width="1000" height="1000">
+                </a>
 
 
 
