--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                     <img class = "canine" src="assets/images/canine-lodge.png" width="1000" height="1000">
                 </a>
 
+                <a href="hhttps://infinite-waters-90916.herokuapp.com">
+                    <img class = "The-Cellar" src="assets/images/canine-lodge.png" width="1000" height="1000">
+                </a>
+
 
 
 
